# hareflow

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeCPack.cmake  CMakeLists.txt  LICENSE  README.md  hareflow-config.cmake.in  vcpkg-configuration.json  vcpkg.json
.github/workflows/: tests.yml
benchmarks/: CMakeLists.txt  end_to_end.cpp
googletest/: CMakeLists.txt
include/: hareflow.h
include/hareflow/: client.h  client_parameters.h  codec.h  consumer.h  consumer_builder.h  environment.h  environment_builder.h  exceptions.h  export.h  io_context_holder.h  logging.h  message_builder.h  producer.h  producer_builder.h  qpid_proton_codec.h  stream_creator.h  types.h
include/hareflow/detail/: accumulator.h  background_scheduler.h  binary_buffer.h  binary_buffer.hpp  client_impl.h  client_impl.hpp  commands.h  connection.h  consumer_impl.h  environment_impl.h  internal_types.h  producer_impl.h  reschedulable_task.h  semaphore.h
integration/: CMakeLists.txt  bench.cpp  producer.cpp  utils.h
src/: CMakeLists.txt  accumulator.cpp  background_scheduler.cpp  binary_buffer.cpp  client_impl.cpp  client_parameters.cpp  codec.cpp  commands.cpp  connection.cpp  consumer_builder.cpp  consumer_impl.cpp  environment_builder.cpp  environment_impl.cpp  exceptions.cpp  io_context_holder.cpp  logging.cpp  message_builder.cpp  producer_builder.cpp  producer_impl.cpp  qpid_proton_codec.cpp  reschedulable_task.cpp  stream_creator.cpp  types.cpp
tests/: CMakeLists.txt  consumer.cpp  producer.cpp
tests/mocks/: internal_client_mock.h  internal_consumer_mock.h  internal_environment_mock.h  internal_producer_mock.h
